--- a/templates/blog/post/list.html
+++ b/templates/blog/post/list.html
@@ -65,5 +65,7 @@ latest_posts: {% show_latest_posts 3 %}
       {% endif %}
     </div>
   </nav>
-  
+  <p>
+    <a href="{% url 'blog:post_feed' %}">Subscribe in RSS</a>
+  </p>
 {% endblock %}
