--- a/templates/blog/post/list.html
+++ b/templates/blog/post/list.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 
-Total Posts: {% total_posts %}
+Total Posts: {% total_posts %} <br>
 
 latest_posts: {% show_latest_posts 3 %}
 
