--- a/templates/blog/post/list.html
+++ b/templates/blog/post/list.html
@@ -42,7 +42,7 @@
     {% for post in posts %}
       <div class="col">
         <div class="card h-100 shadow-sm" style="background-color: #fefefe; border-radius: 12px; transition: transform 0.2s ease-in-out;" onmouseover="this.style.transform='scale(1.02)'" onmouseout="this.style.transform='scale(1)'">
-          {% if post.image %}
+          {% if post.picture_url %}
               <div class="d-flex justify-content-center">
                 <img src="{{ post.picture_url }}" alt="Post image" style="max-width:100%; height:auto;"> 
                      class="card-img-top"
